- version: unreleased
- added a basic profile page, added User authenticated link displays to base.html(@Chino96 )