@@ -1,7 +1,7 @@
 from django import forms
 from django.contrib.auth.forms import ReadOnlyPasswordHashField
 
-from .models import User
+from .models import Student
 
 
 class RegisterForm(forms.ModelForm):
@@ -9,12 +9,12 @@ class RegisterForm(forms.ModelForm):
     password2 = forms.CharField(label='Confirm password', widget=forms.PasswordInput)
 
     class Meta:
-        model = User
+        model = Student
         fields = ('email',)
 
     def clean_email(self):
         email = self.cleaned_data.get('email')
-        qs = User.objects.filter(email=email)
+        qs = Student.objects.filter(email=email)
         if qs.exists():
             raise forms.ValidationError("email is taken")
         return email
@@ -28,15 +28,15 @@ class RegisterForm(forms.ModelForm):
         return password2
 
 
-class UserAdminCreationForm(forms.ModelForm):
+class StudentAdminCreationForm(forms.ModelForm):
     """A form for creating new users. Includes all the required
     fields, plus a repeated password."""
     password1 = forms.CharField(label='Password', widget=forms.PasswordInput)
     password2 = forms.CharField(label='Password confirmation', widget=forms.PasswordInput)
 
     class Meta:
-        model = User
-        fields = ('email',)
+        model = Student
+        fields = ('email', 'courses')
 
     def clean_password2(self):
         # Check that the two password entries match
@@ -48,14 +48,14 @@ class UserAdminCreationForm(forms.ModelForm):
 
     def save(self, commit=True):
         # Save the provided password in hashed format
-        user = super(UserAdminCreationForm, self).save(commit=False)
+        user = super(StudentAdminCreationForm, self).save(commit=False)
         user.set_password(self.cleaned_data["password1"])
         if commit:
             user.save()
         return user
 
 
-class UserAdminChangeForm(forms.ModelForm):
+class StudentAdminChangeForm(forms.ModelForm):
     """A form for updating users. Includes all the fields on
     the user, but replaces the password field with admin's
     password hash display field.
@@ -63,7 +63,7 @@ class UserAdminChangeForm(forms.ModelForm):
     password = ReadOnlyPasswordHashField()
 
     class Meta:
-        model = User
+        model = Student
         fields = ('email', 'password', 'active', 'admin')
 
     def clean_password(self):
