@@ -1,0 +1,18 @@
+# Generated by Django 2.1.7 on 2019-03-04 16:44
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('accounts', '0001_initial'),
+    ]
+
+    operations = [
+        migrations.AddField(
+            model_name='user',
+            name='role',
+            field=models.CharField(blank=True, choices=[(2, 'student'), (1, 'professor'), (0, 'admin')], max_length=255),
+        ),
+    ]
