@@ -1,0 +1,24 @@
+# Generated by Django 2.1.7 on 2019-03-05 01:25
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('courses', '0001_initial'),
+        ('accounts', '0005_professor_student'),
+    ]
+
+    operations = [
+        migrations.AddField(
+            model_name='student',
+            name='courses',
+            field=models.ManyToManyField(to='courses.Course'),
+        ),
+        migrations.AddField(
+            model_name='professor',
+            name='courses',
+            field=models.ManyToManyField(to='courses.Course'),
+        ),
+    ]
