@@ -1,0 +1,31 @@
+# Generated by Django 2.1.7 on 2019-03-05 01:25
+
+from django.db import migrations, models
+import django.db.models.deletion
+
+
+class Migration(migrations.Migration):
+
+    initial = True
+
+    dependencies = [
+        ('accounts', '0005_professor_student'),
+    ]
+
+    operations = [
+        migrations.CreateModel(
+            name='Assignment',
+            fields=[
+                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
+            ],
+        ),
+        migrations.CreateModel(
+            name='Course',
+            fields=[
+                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
+                ('course_name', models.CharField(max_length=255, unique=True)),
+                ('prof', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, to='accounts.Professor')),
+                ('students', models.ManyToManyField(to='accounts.Student')),
+            ],
+        ),
+    ]
