@@ -20,9 +20,8 @@
     <nav>
       <ul>
         <li><a href="{% url 'index' %}">Home</a></li>
-
+          <li><a href="{% url 'profile' %}">Profile</a></li>
           {% if user.is_authenticated %}
-              <li><a href="{% url 'profile' %}">Profile</a></li>
               <li><a href="{% url 'logout' %}">Logout</a></li>
           {% else %}
             <li><a href="{% url 'login' %}">Login</a></li>
